# key_logger

./: .gitignore  Cargo.toml  LICENSE  README.md  mise.toml  rust-toolchain.toml  visualization_patch.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml  version.yml
config/: default.toml  phase1_test.toml  phase2_test.toml  phase3_test.toml  test_alignment.toml  test_row_stagger.toml  test_simple_alignment.toml  v1.toml  v1_advanced_test.toml  v2_example.toml  v2_sample.toml
crates/analizer/: Cargo.toml
crates/analizer/src/: main.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: config.rs  constants.rs  csv_reader.rs  error.rs  geometry.rs  keys.rs  lib.rs  main.rs  optimize.rs
crates/analyzer/src/geometry/: build.rs  builders.rs  fitts.rs  policy.rs  precompute.rs  sets.rs  types.rs  vis.rs  visualization.rs  zoning.rs
crates/analyzer/src/geometry/builders/: col_stagger.rs  custom.rs  ortho.rs  row_stagger.rs
crates/analyzer/src/geometry/visualization/: colors.rs  components.rs  layout_renderer.rs  legend.rs  svg_utils.rs
crates/analyzer/src/optimize/: common.rs  config.rs  fitts.rs  precompute.rs  v1.rs  v2.rs
crates/analyzer/src/optimize/v1/: arrows.rs  fitts.rs  solver.rs
crates/analyzer/src/optimize/v2/: bigrams.rs  digits.rs  fitts.rs  layers.rs  solver.rs
crates/key_logger/: Cargo.toml
crates/key_logger/src/: config.rs  error.rs  main.rs
crates/key_logger/src/platform/: linux.rs  macos.rs
docs/: README.md  v1.md  v2.md  v3.md
figs/: .gitignore
src/: config.rs  export.rs  platform.rs  platform_common.rs  stats.rs
