[package]
name = "key_logger"
version = "0.1.0"
edition = "2024"
authors = ["okawak"]
description = "A secure cross-platform keyboard statistics logger"
license = "MIT"
repository = "https://github.com/okawak/key_logger"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
thiserror = "2"
anyhow = "1"
device_query = "4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }

[target.'cfg(windows)'.dependencies]
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
