[workspace]
members = ["./crates/key_logger", "crates/analizer"]
resolver = "3"

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["okawak"]
license = "MIT"
repository = "https://github.com/okawak/key_logger"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
