[package]
name = "analyzer"
version.workspace = true
authors.workspace = true
description = "Optimize using key_logger results"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
