[package]
name = "analyzer"
version.workspace = true
authors.workspace = true
description = "Optimize using key_logger results"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
csv = "1"
good_lp = { version = "1.14.0", features = ["coin_cbc"] }
image = { version = "0.25", features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
font-kit = "0.14"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
