[package]
name = "key_logger"
version.workspace = true
authors.workspace = true
description = "A secure cross-platform keyboard statistics logger"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
thiserror = "2"
anyhow = "1"
device_query = "4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }

[target.'cfg(windows)'.dependencies]
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
